--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,11 @@ dependencies = [
     "requests>=2.32.4",
     "tqdm>=4.67.1",
 ]
+
+[tool.setuptools.packages.find]
+include = ["cli*", "core*"]
+exclude = ["logs*", "data*", "backups*", "cloned_repos*", "attached_assets*"]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
