--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-# gitMaster-init v1.0.0 Environment Configuration
-# Copy this file to .env and fill in your credentials
-
 # ===== REQUIRED SETTINGS =====
 # Your GitHub Personal Access Token (required scopes: repo, user:follow)
 # You can use either GITHUB_TOKEN or GITHUB_PERSONAL_ACCESS_TOKEN
 GITHUB_TOKEN=your_github_personal_access_token_here
 # GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token_here
-
+DATABASE_URL=your_database_connection_string_here
 # Your GitHub username (auto-detected if not provided)
 GITHUB_USERNAME=your_github_username
 
@@ -21,7 +18,7 @@ LOG_LEVEL=INFO
 # ===== HOW TO GET A GITHUB TOKEN =====
 # 1. Go to https://github.com/settings/tokens
 # 2. Click "Generate new token" -> "Generate new token (classic)"
-# 3. Give it a name like "gitMaster-init"
+# 3. Give it a name like "xxxxxx"
 # 4. Select these scopes:
 #    - repo (Full control of private repositories)
 #    - user:follow (Follow and unfollow users)
